# OpenSquawk-MSFS-Bridge

./: .env.example  .gitignore  .swp  LEGACY-BRIDGE-FUNCTIONALITY.md  OpensquawkBridge-msfs.sln  README.md  Rowsfire A107 V3.0-FBW A320-MSFS2020-Mini OVH Panel.mcc  Rowsfire-A107 V3.0-FBW A32NX.mfproj  layout.json  main.py  manifest.json  package.json  pyproject.toml
OpensquawkBridge-msfs/: BridgeConfig.cs  BridgeManager.cs  MainForm.cs  OpensquawkBridge-msfs.csproj  Program.cs  SimAdapterLoader.cs
OpensquawkBridge.Abstractions/: SimContracts.cs
OpensquawkBridge.SimConnectAdapter/: OpensquawkBridge.SimConnectAdapter.csproj  SimConnectAdapter.cs
SimConnect/: EventList.py  RequestList.py
bridge/: main.py
docs/: AIRCRAFT-INTEGRATION.md  DEBUG-RUNBOOK.md  WASM-INTEGRATION.md
html_ui/InGamePanels/CustomPanel/: CustomPanel.css  CustomPanel.html  CustomPanel.js
html_ui/InGamePanels/OpenSquawkBridge/: OpenSquawkBridge.css  OpenSquawkBridge.html  OpenSquawkBridgePanel.js
html_ui/InGamePanels/PanelDefinitions/: OpenSquawkBridge.xml
opensquawk-panel/: FUNCTIONALITY.md  layout.json  manifest.json
opensquawk-panel/html_ui/InGamePanels/CustomPanel/: CustomPanel.css  CustomPanel.html  CustomPanel.js
opensquawk-panel/html_ui/InGamePanels/OpenSquawkPanel/: OpenSquawkPanel.css  OpenSquawkPanel.html  OpenSquawkPanel.js
server/: server.py
tests/: bridge_shared.test.js
tools/: Publish-Bridge.ps1  update-package-metadata.mjs
wasm/opensquawk_bridge/: CMakeLists.txt
wasm/opensquawk_bridge/src/: Bridge.cpp  Bridge.h  exports.cpp
(+4 files in other folders)
