[project]
name = "opensquawk-msfs-bridge"
version = "0.1.0"
description = ""
authors = [
    {name = "remi",email = "info@opensquawk.de"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
